--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "homepage": "https://github.com/nohe427/genkitx-nohe-utils#readme",
   "devDependencies": {
     "typescript": "^5.7.3"
+  },
+  "peerDependencies": {
+    "@google-cloud/storage": "^7.15.2",
+    "genkit": "^1.0.5"
   }
 }
